# eimage

./: Cargo.toml  README.md
crates/eimage/: Cargo.toml  README.md
crates/eimage-cli/: Cargo.toml  README.md
crates/eimage-cli/src/: arguments.rs  cli.rs  error.rs  main.rs
crates/eimage-cli/src/commands/: test.rs
crates/eimage-core/: Cargo.toml  README.md
crates/eimage-core/src/: error.rs  image.rs  image_collection.rs  image_series.rs  lib.rs
crates/eimage-io/: Cargo.toml  README.md
crates/eimage-io/src/: error.rs  lib.rs
crates/eimage-io/src/eimage/: mod.rs  write.rs  write_impl.rs
crates/eimage/src/: lib.rs
