[workspace]
members = [
    "crates/*"
]

resolver = "2"

[workspace.package]
version = "0.0.1-alpha.4"
authors = ["Benedikt Schwab <benedikt.schwab@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/envis-space/eimage"

[workspace.dependencies]
ecoord = { version = "0.0.1-alpha.4" }

clap = "4.5.13"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
image="0.25.2"
thiserror = "1.0.63"
chrono = "0.4.38"
rayon = "1.10.0"
tar = "0.4"
zstd = "0.13.2"
