[package]
name = "eimage-io"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "IO operations for processing image collections in 3D space."


[dependencies]
eimage-core = { version = "0.0.1-alpha.8", path = "../eimage-core" }

ecoord = { workspace = true }

thiserror = { workspace = true }
image = { workspace = true }
tar = { workspace = true }
zstd = { workspace = true }
regex = "1.11.1"
