[package]
name = "eimage"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Library for processing image collections in 3D space."


[dependencies]
eimage-core = { version = "0.0.1-alpha.8", path = "../eimage-core" }
eimage-io = { version = "0.0.1-alpha.8", path = "../eimage-io" }
